--- a/OfficeStruct-Agent-Win/OfficeStruct-Agent-Win.csproj
+++ b/OfficeStruct-Agent-Win/OfficeStruct-Agent-Win.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Extensions.cs" />
+    <Compile Include="Classes\NativeMethods.cs" />
     <Compile Include="Classes\Options.cs" />
     <Compile Include="Classes\Shared.cs" />
     <Compile Include="Classes\Xml.cs" />
