I'm trying to upload the EXE file

--- a/OfficeStruct-Agent-Win/OfficeStruct-Agent-Win.csproj
+++ b/OfficeStruct-Agent-Win/OfficeStruct-Agent-Win.csproj
@@ -102,7 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\btnAddFolder.png" />
-    <None Include="bin\Debug\OfficeStruct-Agent-Win.exe" />
+    <Content Include="bin\Debug\OfficeStruct-Agent-Win.exe" />
     <Content Include="todo.txt" />
   </ItemGroup>
   <ItemGroup>
